@@ -1,1 +1,2 @@
 * added many='true' to FeaturTypeType#getOtherSRS() and OutputFormatListType#getFormat()
+* added GetFeatureType#getFormatOptions() : Map
